2009-05-12  Aaron Faupell  <afaupell@users.sourceforge.net>

	* tar.tcl: add support for reading pre-posix archives.
	  if a file isnt writable when extracting, try deleting
	  before giving up

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-11-26  Aaron Faupell  <afaupell@users.sourceforge.net>

	* tar.man: add and clarify documentation

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-06-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tar.pcx: New file. Syntax definitions for the public commands of
	  the tar package.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tar.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2007-02-08  Aaron Faupell  <afaupell@users.sourceforge.net>

	* tar.tcl: bug fix in recursion algorithm that missed
	some files in deep subdirs. incremented version

2007-01-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tar.tcl: Bumped version to 0.3, for the bugfix described
	* tar.man: by the last entry.
	* pkgIndex.tcl:

2006-12-20  Aaron Faupell  <afaupell@users.sourceforge.net>

	* tar.tcl: fix in parseOpts which affected -file and -glob
	  arguments to tar::untar
	* tar.man: clarifications to add, create, and untar

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-29-06  Aaron Faupell  <afaupell@users.sourceforge.net>

	* tar.tcl: fixed bug in parseOpts

2005-11-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl: Corrected buggy commit, synchronized version